--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,7 +1,17 @@
 [
   {
+    "name": "hub",
+    "url": "https://Aotumuri.github.io/hub/",
+    "github_url": "https://github.com/Aotumuri/hub",
+    "description": "私の全てのサイトを確認できます。",
+    "updated_at": "2025-10-15T23:49:23Z",
+    "stars": 0,
+    "language": "Python"
+  },
+  {
     "name": "path-tracer",
     "url": "https://Aotumuri.github.io/path-tracer/",
+    "github_url": "https://github.com/Aotumuri/path-tracer",
     "description": "",
     "updated_at": "2025-10-13T12:20:05Z",
     "stars": 0,
@@ -10,6 +20,7 @@
   {
     "name": "ani2cape_site",
     "url": "https://Aotumuri.github.io/ani2cape_site/",
+    "github_url": "https://github.com/Aotumuri/ani2cape_site",
     "description": "",
     "updated_at": "2025-10-12T06:11:48Z",
     "stars": 0,
@@ -18,6 +29,7 @@
   {
     "name": "json_splitter",
     "url": "https://Aotumuri.github.io/json_splitter/",
+    "github_url": "https://github.com/Aotumuri/json_splitter",
     "description": "",
     "updated_at": "2025-10-06T10:41:56Z",
     "stars": 0,
@@ -26,6 +38,7 @@
   {
     "name": "openfront-utility",
     "url": "https://Aotumuri.github.io/openfront-utility/",
+    "github_url": "https://github.com/Aotumuri/openfront-utility",
     "description": "",
     "updated_at": "2025-10-04T12:23:22Z",
     "stars": 0,
@@ -34,6 +47,7 @@
   {
     "name": "redirector",
     "url": "https://Aotumuri.github.io/redirector/",
+    "github_url": "https://github.com/Aotumuri/redirector",
     "description": "",
     "updated_at": "2025-08-31T01:28:09Z",
     "stars": 0,
@@ -42,6 +56,7 @@
   {
     "name": "css-animation",
     "url": "https://Aotumuri.github.io/css-animation/",
+    "github_url": "https://github.com/Aotumuri/css-animation",
     "description": "",
     "updated_at": "2025-06-21T04:48:24Z",
     "stars": 0,
@@ -50,6 +65,7 @@
   {
     "name": "TerritoryConquestSimulator",
     "url": "https://Aotumuri.github.io/TerritoryConquestSimulator/",
+    "github_url": "https://github.com/Aotumuri/TerritoryConquestSimulator",
     "description": "自動で動くものが見たい人へ",
     "updated_at": "2025-03-18T22:58:15Z",
     "stars": 1,
