--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Commit & push if changed
         run: |
           if [ -n "$(git status --porcelain)" ]; then
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git config user.name "${GITHUB_ACTOR}"
+            git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
             git add _data/projects.json
             git commit -m "chore: update _data/projects.json"
             git push
