chore: update _data/projects.json

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,5 +1,14 @@
 [
   {
+    "name": "isekai-sim",
+    "url": "https://Aotumuri.github.io/isekai-sim/",
+    "github_url": "https://github.com/Aotumuri/isekai-sim",
+    "description": "",
+    "updated_at": "2026-01-24T12:33:30Z",
+    "stars": 0,
+    "language": "TypeScript"
+  },
+  {
     "name": "openfront-utility",
     "url": "https://Aotumuri.github.io/openfront-utility/",
     "github_url": "https://github.com/Aotumuri/openfront-utility",
