chore: update _data/projects.json

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -3,9 +3,9 @@
     "name": "isekai-sim",
     "url": "https://Aotumuri.github.io/isekai-sim/",
     "github_url": "https://github.com/Aotumuri/isekai-sim",
-    "description": "",
-    "updated_at": "2026-01-24T12:33:30Z",
-    "stars": 0,
+    "description": "自動で動くものが見たい人へ 2",
+    "updated_at": "2026-01-25T12:37:29Z",
+    "stars": 1,
     "language": "TypeScript"
   },
   {
